--- a/inline-block/index.html
+++ b/inline-block/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
     <p class="demo_1 ">
-        <span class="demo-inline-1 ve"></span>
-        <span class="fz-large demo-inline-1 ve1"></span>
+        <span class="demo-inline-1"></span>
+        <span class="right demo-inline-1"></span>
     </p>
     <div class="demo_2">
-        <div class="demo-inline-2 a"></div>
-        <div class="fz-large demo-inline-2 "></div>
+        <div class="demo-inline-2"></div>
+        <div class="right demo-inline-2"></div>
     </div>
     <div class="demo_3">
         <div class="demo-inline-3"></div>
-        <div class="fz-large demo-inline-3"></div>
+        <div class="right demo-inline-3"></div>
     </div>
     <p class="demo_4 ">
-        <span class="demo-inline-4 "></span>
-        <span class="demo-inline-4-2"></span>
+        <span class="demo-inline-4"></span>
+        <span class="large demo-inline-4"></span>
     </p>
 </p>
 <div class="demo_5">
+    <div class="large demo-inline-5"></div>
     <div class="demo-inline-5"></div>
-    <div class="demo-inline-5-2"></div>
 </div>
 <div class="demo_6">
     <div class="demo-inline-6"></div>
-    <div class="demo-inline-6-2"></div>
+    <div class="large demo-inline-6"></div>
 </div>
 </body>
 </html>
