--- a/service-block/index.html
+++ b/service-block/index.html
@@ -13,7 +13,7 @@
           <div class="column">
             <div class="service-block-item">
               <div class="service-block_image">
-                <img src="UnlimitedColor.png" alt="">
+                <img src="Images/UnlimitedColor.png" alt="">
               </div>
               <div class="service-block_content">
                 <h3 class="service-block_title">Unlimited Color</h3>
@@ -24,77 +24,55 @@
           <div class="column">
             <div class="service-block-item">
               <div class="service-block_image">
-                <img src="UnlimitedColor.png" alt="">
+                <img src="Images/translation-ready.png" alt="">
               </div>
               <div class="service-block_content">
-                <h3 class="service-block_title">Unlimited Color</h3>
-                <p class="service-block_description">mo& .po files are prepared in advanced, you can create a multilanguage site quickly & autumatically</p>
+                <h3 class="service-block_title">Translation Ready</h3>
+                <p class="service-block_description">mo& .po files are prepared in advanced, you can create a multilanguage site quickly & autumatically.</p>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="column">
             <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
+              <div class="service-block_image">
+                <img src="Images/gg-font.png" alt="">
               </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
+              <div class="service-block_content">
+                <h3 class="service-block_title">700+ Google Web Fonts</h3>
+                <p class="service-block_description">We comes with 700+ optimized google fonts.</p>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="column">
             <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
+              <div class="service-block_image">
+                <img src="Images/woocommerce.png" alt="">
               </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
+              <div class="service-block_content">
+                <h3 class="service-block_title">WooCommerce Ready</h3>
+                <p class="service-block_description">Create full eCommerce sites easily with WooCommerce.</p>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="column">
             <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
+              <div class="service-block_image">
+                <img src="Images/slider-revulation.png" alt="">
               </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
+              <div class="service-block_content">
+                <h3 class="service-block_title">Slider Revolution</h3>
+                <p class="service-block_description">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="column">
             <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
+              <div class="service-block_image">
+                <img src="Images/visual-composer.png" alt="">
               </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
-              </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="service-block-item">
-              <div class="service-block__image">
-                <img src="UnlimitedColor.png" alt="">
-              </div>
-              <div class="service-block__content">
-                <h3 class="service-block__title">Unlimited Color</h3>
-                <p class="service-block__desc">With color picker in admin panel, you can make your site more dynamic. You can choose a color from popup with one click or paste your code into field.</p>
+              <div class="service-block_content">
+                <h3 class="service-block_title">Visual Composer</h3>
+                <p class="service-block_description">mo& .po files are prepared in advanced, you can create a multilanguage site quickly & autumatically.</p>
               </div>
             </div>
           </div>
